// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="_root_32b42f _root_97d9f6"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="_root_32b42f _secondary_32b42f _root_97d9f6"
>
  foo
</button>
`;
